Fixed crooked navigation arrows on smaller screens.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,4 +6,9 @@
 
  /* enable focus styles for keyboard navigation */
 .flexslider:hover .flex-next:hover, .flexslider:hover .flex-prev:hover,
-.flexslider .flex-next:focus, .flexslider .flex-prev:focus {background-position-y: -100px;}
+.flexslider .flex-next:focus, .flexslider .flex-prev:focus {background-position-y: 100%;}
+
+@media (max-width: 640px) {
+    .flexslider:hover .flex-next:hover, .flexslider:hover .flex-prev:hover,
+    .flexslider .flex-next:focus, .flexslider .flex-prev:focus {background-position-y: 83%;}
+}
